--- a/slides/fwatch_fosdem2015.tex
+++ b/slides/fwatch_fosdem2015.tex
@@ -8,8 +8,8 @@
 \setbeamertemplate{navigation symbols}{}
 \setbeamertemplate{headline}{}
 
-\setbeameroption{show notes}
-%\setbeameroption{hide notes}
+%\setbeameroption{show notes}
+\setbeameroption{hide notes}
 
 %\hypersetup{pdfpagemode=FullScreen} % makes your presentation go automatically to full screen
 %\useoutertheme[subsection=false]{smoothbars}
@@ -217,6 +217,7 @@
 \begin{frame}{The design}
 
   Components selection criteria
+  \vskip 5mm
 
   \begin{itemize}
   \item Low power consumption
@@ -236,20 +237,21 @@
   \begin{columns}[T] % align columns
     \begin{column}{.48\textwidth}
 
-      GPS module
-
+      Micro-controller
+      \vskip 6mm
       \begin{itemize}
-      \item Antenova
+      \item Silicon Labs
       \item 13 x 9.5 x 1.8mm
-      \item Integrated antenna
+      \item 32-bit Cortex-M3
+      \item 1MB flash
+      \item 128kB RAM
+      \item 1.1uA deep sleep
       \end{itemize}
 
     \end{column}
     \hfill%
     \begin{column}{.48\textwidth}
-      \begin{center}
-        \includegraphics[height=5cm]{M10478-A1.eps}
-      \end{center}
+      \includegraphics[height=5cm]{mcu_efm32.eps}
     \end{column}%
   \end{columns}
 
@@ -260,37 +262,23 @@
 %------------ FRAME --------------------------------------------------
 \begin{frame}{Components selection}
 
-  Altimeter module (pressure sensor)
+  \begin{columns}[T] % align columns
+    \begin{column}{.48\textwidth}
 
-  \begin{itemize}
-  \item Measurement Specialties
-  \item 6.4 x 4 x 2.8mm
-  \item Water resistant
-  \item Includes a thermometer
-  \end{itemize}
+      GPS module
+      \vskip 6mm
+      \begin{itemize}
+      \item Antenova
+      \item 13 x 9.5 x 1.8mm
+      \item Integrated antenna
+      \end{itemize}
 
-  \begin{center}
-    \includegraphics[height=4.5cm]{MS5806-02BA52-51.eps}
-  \end{center}
-
-  \note[item]{}
-
-\end{frame}
-
-%------------ FRAME --------------------------------------------------
-\begin{frame}{Components selection}
-
-  Memory LCD display
-
-  \begin{itemize}
-  \item Sharp
-  \item 128 x 128 pixels (1.28 inches)
-  \item Ultra low current
-  \end{itemize}
-
-  \begin{center}
-    \includegraphics[height=4.5cm]{LCD.eps}
-  \end{center}
+    \end{column}
+    \hfill%
+    \begin{column}{.48\textwidth}
+      \includegraphics[height=5cm]{M10478-A1.eps}
+    \end{column}%
+  \end{columns}
 
   \note[item]{}
 
@@ -299,19 +287,79 @@
 %------------ FRAME --------------------------------------------------
 \begin{frame}{Components selection}
 
-  Battery
+  \begin{columns}[T] % align columns
+    \begin{column}{.48\textwidth}
 
-  \begin{itemize}
-  \item Adafruit
-  \item Li-ion 500mAh
-  \item Lightweight, big capacity
-  \end{itemize}
+      Altimeter module \\
+      (pressure sensor)
+      \vskip 6mm
+      \begin{itemize}
+      \item Measurement Specialties
+      \item 6.4 x 4 x 2.8mm
+      \item Water resistant
+      \item Includes a thermometer
+      \end{itemize}
 
-  \begin{center}
-    \includegraphics[height=5cm]{battery.eps}
-  \end{center}
+    \end{column}
+    \hfill%
+    \begin{column}{.48\textwidth}
+      \includegraphics[height=4.5cm]{MS5806-02BA52-51.eps}
+    \end{column}%
+  \end{columns}
+
+  \note[item]{}
+
+\end{frame}
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{Components selection}
+
+  \begin{columns}[T] % align columns
+    \begin{column}{.48\textwidth}
+
+      Memory LCD display
+      \vskip 6mm
+      \begin{itemize}
+      \item Sharp
+      \item 128 x 128 pixels
+      \item 1.28 inches
+      \item Ultra low current
+      \end{itemize}
+
+    \end{column}
+    \hfill%
+    \begin{column}{.48\textwidth}
+      \includegraphics[height=4.5cm]{LCD.eps}
+    \end{column}%
+  \end{columns}
+
+  \note[item]{}
+
+\end{frame}
+
+%------------ FRAME --------------------------------------------------
+\begin{frame}{Components selection}
+
+  \begin{columns}[T] % align columns
+    \begin{column}{.48\textwidth}
+
+      Battery
+      \vskip 6mm
+      \begin{itemize}
+      \item Adafruit
+      \item Li-ion 500mAh
+      \item Lightweight, big capacity
+      \end{itemize}
+
+    \end{column}
+    \hfill%
+    \begin{column}{.48\textwidth}
+      \includegraphics[height=4.5cm]{battery.eps}
+    \end{column}%
+  \end{columns}
 
   \note{battery}
+
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -320,11 +368,11 @@
   \begin{itemize}
   \item 3-axis accelerometer + compass
   \item Ambient light sensor
-  \item SD card slot
+  \item SDcard slot
+  \item Battery charger + fuel gauge
+  \item micro-USB connector
   \item Buzzer
   \item Vibrating motor
-  \item Battery charger + fuel gauge
-  \item microUSB connector (battery charging, firmware upload, data transfer)
   \end{itemize}
 
   \begin{center}
@@ -332,13 +380,14 @@
   \end{center}
 
   \note{Talk about foreseen improvements?? Bluetooth}
+  \note{USB is used for battery charging, firmware upload, data transfer}
 
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
 \begin{frame}{PCB design}
 
-  EDA tool choice
+  %EDA tool choice
 
   \begin{center}
     \includegraphics[height=1cm]{kicad_logo.eps}
@@ -350,6 +399,7 @@
   \item New features making routing easier (e.g push\&shove)
   \end{itemize}
 
+  \vskip 6mm
   Interested in knowing more about KiCad developments?
   \begin{itemize}
   \item Visit the EDA tools dev room tomorrow
@@ -372,9 +422,8 @@
   \end{itemize}
 
   \begin{center}
-    PCB top and bottom pictures here
-    %\includegraphics[height=1cm]{pcb_top.eps}~
-    %\includegraphics[height=1cm]{pcb_bot.eps}
+    \includegraphics[height=4cm]{pcb_top.eps}~
+    \includegraphics[height=4cm]{pcb_bottom.eps}
   \end{center}
 
   \note[item]{there is still free space (without components)}
@@ -425,8 +474,8 @@
   First try: LEDs + opaque plexiglass
 
   \begin{center}
-    Backlight pictures here (on and off)
-    %\includegraphics[height=5cm]{battery.eps}
+    \includegraphics[height=4.5cm]{bl_led_off.eps}~
+    \includegraphics[height=4.5cm]{bl_led_on.eps}
   \end{center}
 
   \textbf{FAIL!}
@@ -441,8 +490,8 @@
   Second try: Recycled smartphone backlight
 
   \begin{center}
-    Backlight pictures here
-    %\includegraphics[height=5cm]{battery.eps}
+    \includegraphics[height=4.5cm]{bl_smartphone_off.eps}~
+    \includegraphics[height=4.5cm]{bl_smartphone_on.eps}
   \end{center}
 
   \textbf{Better, but...}
@@ -457,11 +506,13 @@
   Current try: Custom-made module
 
   \begin{center}
-    Backlight pictures here (on and off)
-    %\includegraphics[height=5cm]{battery.eps}
+    \includegraphics[height=4.5cm]{bl_custom_off.eps}~
+    \includegraphics[height=4.5cm]{bl_custom_on.eps}
   \end{center}
 
-  \note[item]{contacted many company, found one with no MOQ of millions}
+  \textbf{The solution}
+
+  \note[item]{contacted many company, found one with no MOQ of thousands}
   \note[item]{got first samples}
   \note[item]{cheap even for small quantity}
   \note[item]{negative point, a bit thick compared to high-tech smartphones}
@@ -503,15 +554,17 @@
   Full of new challenges
 
   \begin{itemize}
-  \item Using a CAD tool, learning Freecad
+  \item Learning and using Freecad
   \item 3D printing
   \end{itemize}
 
+  \vskip 6mm
   It's time for a (hopefully working) live demo!
 
   \note[item]{Learn Freecad = no mech engineer in the team, lots of online tutorials}
   \note[item]{3D printing = didn't knew the domain, studied the main 3d printing services}
   \note[item]{3D printing = every order was exiting, to see the result}
+  \note[item]{OR live demo at the end of mechanics section??}
 
 \end{frame}
 
@@ -521,11 +574,11 @@
   The buttons
 
   \begin{center}
-    cut-view of button here (+maybe some hand drawing of our ideas?)
-    %\includegraphics[height=2cm]{freecad_logo.eps}
+    \includegraphics[height=4.5cm]{button_cross-section.eps}~
+    \includegraphics[height=4.5cm]{button_circlip.eps}
   \end{center}
 
-  \note[item]{}
+  \note[item]{cross section of button here (+maybe some hand drawing of our ideas?)}
 
 \end{frame}
 
@@ -549,7 +602,12 @@
   \begin{center}
     \includegraphics[height=4.8cm]{case-design-model.eps}
   \end{center}
+
+  Making of movie
+  \url{http://www.ohwr.org/projects/f-watch/wiki/Movies}
+
   \note{3D model}
+
 \end{frame}
 
 %------------ FRAME --------------------------------------------------
@@ -593,8 +651,9 @@
   \end{itemize}
 
   \begin{center}
-    Picture of the new fastening method + transparent 3d view
-    %\includegraphics[height=4.1cm]{case-design-print-v4.eps}
+    \includegraphics[height=4.5cm]{case_new_screws.eps}~
+    Picture here
+    %\includegraphics[height=4.1cm]{case_new_screws.eps}
   \end{center}
 
   \note{Talk about improvements to be done?? Water-resistance}
